# PBBM-robot-librarian

./: LICENSE  README.md  requirements.txt
librarian_common/librarian_resources/: CMakeLists.txt  books-original.csv  books.csv  books_backup.csv  books_full.csv  books_one.csv  books_reduced.csv  hsv.ipynb  hue.txt  package.xml  sat.txt  setup.sh  val.txt
librarian_common/librarian_resources/launch/: config.rviz  spawn_books.launch  spawn_shelf.launch  test_interaction_node.launch
librarian_common/librarian_resources/meshes/: base.scad  base.stl  bottom_shelf.scad  bottom_shelf.stl  shelf.scad  toatal.scad  top_shelf.scad  top_shelf.stl
librarian_common/librarian_resources/models/: marker.urdf.xacro  shelf.urdf.xacro
librarian_common/librarian_resources/models/shelf/: model.config  model.sdf  shelf.dae
librarian_common/librarian_resources/models/shelf/media/materials/: repeated.material
librarian_common/librarian_resources/models/shelf/media/textures/: .~lock.wood1.jpg#
librarian_common/librarian_resources/msg/: Book.msg  BookDetections.msg  BookPlacement.msg  BookPolys.msg  BookRecognition.msg  BookRecognitions.msg  BookShelfInfo.msg  Books.msg  Environment.msg  Manipulate.msg  ShelfImage.msg  ShelfImages.msg  TextRecognition.msg  TextRecognitions.msg  VisionControl.msg
librarian_common/librarian_resources/scripts/: fake_manipulation.py  interaction_node.py  librarian_shelf_from_image.py  test_interaction_node.py  tf_shelf_from_apriltags.py
librarian_common/librarian_resources/srv/: BookCoverInspect.srv  EnvironmentService.srv  ManipulationService.srv
librarian_common/librarian_resources/world/: shelf.stl  shelf.world  shelf1.world
librarian_common/librarian_resources/world/media/materials/: repeated.material
librarian_vision/librarian_panel/: CMakeLists.txt  package.xml  plugin_description.xml
librarian_vision/librarian_panel/src/: librarian_panel.cpp  librarian_panel.h
librarian_vision/librarian_vision_node/: CMakeLists.txt  package.xml  setup.py
librarian_vision/librarian_vision_node/config/: tags.yaml  transforms.md
librarian_vision/librarian_vision_node/include/: librarian_pc_process_node.h
librarian_vision/librarian_vision_node/launch/: librarian_continuous_detection.launch  librarian_vision.launch  librarian_vision_pr2_azure.launch  librarian_vision_pr2_azure_sim.launch
librarian_vision/librarian_vision_node/scripts/: book_cover_inspection_node.py  detection_node.py  librarian_book_extract.py  librarian_environment.py  librarian_image_preproc.py  recognize_node.py
librarian_vision/librarian_vision_node/src/: librarian_pc_process_node.cpp
librarian_vision/librarian_vision_node/src/librarian_craft/: README.md  infer.py
librarian_vision/librarian_vision_node/src/librarian_dtrb/: README.md  dataset.py  dtrb_model.py  log_demo_result.txt  model.py
librarian_vision/librarian_vision_node/src/librarian_monitor/: librarian_monitor.py
librarian_vision/librarian_vision_node/src/librarian_segmentation/: bbox.py  segmentation.py
librarian_vision/librarian_vision_node/srv/: LibrarianPcProcess.srv
(+227 files in other folders)
