<?xml version="1.0"?>
<package format="2">
  <name>librarian_vision_node</name>
  <version>0.0.1</version>
  <description>The librarian_vision_node package</description>

  <maintainer email="fabian.wieczorek@uni-hamburg.de">Fabian Wieczorek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>engenpy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>eigenpy</exec_depend>
  <depend>rviz</depend>
</package>
